design fix stop limit of content brief on mobile

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1058,7 +1058,6 @@ h3.project-title.small-category-title {
   }
    .video-col h3.content-brief {
     height:auto;
-    max-height:50px;
     margin-top: -4px;
     }
 }
